Determine the layoutobject of middleClickAutoscroll by the scroll direction.

Previously, when middleClickAutoscroll is triggered, the layoutObject to be
scrolled is only determined by the element clicked. However, if the
layoutObject can be scrolled but not in the direction we want, the autoscroll
could not be triggered. In this patch, we determine the layoutObject not only
by the initial click position, but also the initial scroll direction. We also
make sure that when the initial click position is in an iframe, the event will
correctly propagate to its owner element.

BUG=623366

Review-Url: https://codereview.chromium.org/2484563003
Cr-Commit-Position: refs/heads/master@{#432534}

Former-commit-id: e4af1f04e6a998799e2dab6633518470dc95d826