third_party/WebKit/Source/core/page/AutoscrollController.h
@@ -27,6 +27,7 @@
 #define AutoscrollController_h
 
 #include "core/CoreExport.h"
+#include "platform/geometry/FloatSize.h"
 #include "platform/geometry/IntPoint.h"
 #include "platform/heap/Handle.h"
 
@@ -80,6 +81,7 @@ class CORE_EXPORT AutoscrollController final
 
   void updateMiddleClickAutoscrollState(FrameView*,
                                         const IntPoint& lastKnownMousePosition);
+  FloatSize calculateAutoscrollDelta();
 
   Member<Page> m_page;
   LayoutBox* m_autoscrollLayoutObject;
@@ -88,6 +90,7 @@ class CORE_EXPORT AutoscrollController final
   IntPoint m_dragAndDropAutoscrollReferencePosition;
   double m_dragAndDropAutoscrollStartTime;
   IntPoint m_middleClickAutoscrollStartPos;
+  bool m_didLatchForMiddleClickAutoscroll;
 };
 
 }  // namespace blink
